# coffee-rt

./: .envrc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  BLOG.md  BLOG2.md  EXPERIMENTS.md  ISSUE.md  PORTFOLIO.md  PROBLEMS.md  README.md  SCALE.md  SCALE_NEW.md  TODO.md  docker-compose.base.yaml  docker-compose.v1.yaml  docker-compose.v2.yaml  docker-compose.v3.yaml  docker-compose.yaml  flake.nix  ideas.md  justfile  pyproject.toml  versions.md
.dev/db-migrate/: Dockerfile
.dev/integration_test/: script.sh
.dev/kafka-init/: init.sh
.dev/monitoring/grafana/dashboards/: coffee-rt-overview.json
.dev/monitoring/grafana/provisioning/datasources/: datasources.yaml
.dev/monitoring/loki/: loki-config.yaml
.dev/monitoring/prometheus/: prometheus.yml
.dev/monitoring/promtail/: promtail-config.yaml
.dev/redis-init/: Dockerfile  init.sh
.github/: README.md
.github/scripts/: detect_changes.py
.github/workflows/: ci.yaml
backend/cafe_order_aggregator/: Dockerfile  Dockerfile.cron  pyproject.toml
backend/cafe_order_aggregator/src/cafe_order_aggregator/: __init__.py  aggregator.py  env.py  main.py  redis_client.py  utils.py
backend/cafe_order_aggregator/src/cafe_order_aggregator/db/: __init__.py  queries.py
backend/cafe_order_aggregator/tests/: __init__.py  conftest.py  test_aggregator.py  test_db_queries.py  test_redis_client.py  test_utils.py
backend/cafe_order_api/: .http  Dockerfile  README.md  pyproject.toml
backend/cafe_order_api/src/cafe_order_api/: __init__.py  app.py  domain.py  env.py  logger.py  metrics.py  middelware.py  utils.py
backend/cafe_order_api/src/cafe_order_api/db/: __init__.py  orders.py
backend/cafe_order_api/src/cafe_order_api/handlers/: __init__.py  dashboard.py  orders.py  websocket.py
backend/cafe_order_api/src/cafe_order_api/handlers/orders/: __init__.py  v1.py  v2.py  v3.py
backend/cafe_order_api/src/cafe_order_api/routers/: __init__.py  v1.py  v2.py  v3.py
backend/cafe_order_api/tests/: __init__.py  conftest.py  test_api_dashboard.py  test_api_order.py  test_db_orders.py  test_domain.py  test_handlers_dashboard.py  test_handlers_orders.py  test_handlers_orders_v1.py  test_handlers_orders_v2.py  test_handlers_orders_v3.py  test_handlers_websocket.py  test_logger.py  test_middleware.py  test_routers_v1.py  test_routers_v2.py  test_routers_v3.py  test_utils.py
backend/coffee_consumer_simulator/: Dockerfile  README.md  pyproject.toml
backend/coffee_consumer_simulator/results/: v1_stats.csv  v1_stats_history.csv
backend/coffee_consumer_simulator/src/coffee_consumer_simulator/: __init__.py  benchmark.py  locustfile.py  run_load_test.py
backend/db/: Dockerfile  pyproject.toml
backend/db/alembic/: env.py
backend/db/alembic/versions/: 001_initial_schema.py  002_add_orders_indexes.py  003_add_message_id.py
backend/shared/: pyproject.toml
backend/shared/src/shared/: __init__.py  domain.py  logger.py
backend/shared/tests/: __init__.py  conftest.py  test_domain.py  test_logger.py
backend/stream_worker/: Dockerfile  pyproject.toml
backend/stream_worker/src/stream_worker/: __init__.py  consumer.py  env.py  main.py
flink/coffee-rt-flink/: Dockerfile  checkstyle.xml  dependency-reduced-pom.xml  pom.xml
flink/coffee-rt-flink/src/main/resources/: log4j2.properties
flink/coffee-rt-flink/src/test/resources/: simplelogger.properties
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: ConnectionStatus.tsx  Dashboard.tsx  HourlyMetrics.tsx  LastUpdated.tsx  RecentOrders.tsx  ThemeToggle.tsx  TopDrinks.tsx
frontend/src/hooks/: useDashboardWebSocket.ts
frontend/src/tests/: ConnectionStatus.test.tsx  Dashboard.test.tsx  HourlyMetrics.test.tsx  LastUpdated.test.tsx  RecentOrders.test.tsx  ThemeToggle.test.tsx  TopDrinks.test.tsx  useDashboardWebSocket.test.ts
frontend/src/types/: dashboard.ts
helm/coffee-rt/: Chart.yaml  values.deploy.v1.yaml  values.deploy.v2.yaml  values.deploy.v3.yaml  values.dev.yaml  values.v1.yaml  values.v2.yaml  values.v3.yaml  values.yaml
helm/coffee-rt/charts/aggregator/: Chart.yaml  values.yaml
helm/coffee-rt/charts/aggregator/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  serviceaccount.yaml
helm/coffee-rt/charts/api/: Chart.yaml  values.yaml
helm/coffee-rt/charts/api/templates/: NOTES.txt  _helpers.tpl  deployment.yaml
helm/coffee-rt/charts/db-migrate/: Chart.yaml  values.yaml
helm/coffee-rt/charts/db-migrate/templates/: _helpers.tpl  job.yaml  serviceaccount.yaml
helm/coffee-rt/charts/flink/: Chart.yaml  values.yaml
helm/coffee-rt/charts/flink-job/: Chart.yaml  values.yaml
helm/coffee-rt/charts/flink-job/templates/: _helpers.tpl  deployment.yaml
helm/coffee-rt/charts/flink/templates/: _helpers.tpl  configmap.yaml  job-deployment.yaml  jobmanager-deployment.yaml  (+2 more)
helm/coffee-rt/charts/frontend/: Chart.yaml  values.yaml
helm/coffee-rt/charts/kafka-confluent/: Chart.yaml  values.yaml
helm/coffee-rt/charts/load-tester/: Chart.yaml  values.yaml
helm/coffee-rt/charts/stream-worker/: Chart.yaml  values.yaml
helm/coffee-rt/templates/: NOTES.txt  _helpers.tpl  secret.yaml
infra/: README.md  init-tf-state.sh  root.hcl
infra/environments/dev/: env.hcl
infra/environments/dev/acr/: terragrunt.hcl
infra/environments/dev/aks/: terragrunt.hcl
infra/environments/dev/bastion/: terragrunt.hcl
infra/environments/dev/github-oidc/: terragrunt.hcl
infra/environments/dev/resource-group/: terragrunt.hcl
infra/environments/dev/storage/: .terraform.lock.hcl  terragrunt.hcl
infra/environments/dev/vnet/: terragrunt.hcl
infra/modules/acr/: main.tf  outputs.tf  variables.tf
infra/modules/aks/: main.tf  outputs.tf  variables.tf
infra/modules/bastion/: main.tf  outputs.tf  variables.tf
infra/modules/github-oidc/: main.tf  outputs.tf  variables.tf
infra/modules/resource-group/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf  variables.tf
infra/modules/vnet/: main.tf  outputs.tf  variables.tf
(+23 files in other folders)
