[project]
name = "cafe-order-api"
version = "0.1.0"
description = "Cafe Order API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coffee-rt-shared",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "debugpy>=1.8.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "redis>=7.1.0",
    "psycopg[binary]>=3.1.0",
    "websockets>=12.0",
]

[tool.uv.sources]
coffee-rt-shared = { path = "../shared" }

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.8.0",
    "coverage>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cafe_order_api"]
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "coverage>=7.0.0",
]
