[project]
name = "coffee-rt-db"
version = "0.1.0"
description = "Coffee RT database management and migrations"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alembic"]
