[project]
name = "coffee-rt-shared"
version = "0.1.0"
description = "Shared models for Coffee RT services"
requires-python = ">=3.13"
dependencies = ["pydantic>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0.0", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
